# CineNow

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: cahier_des_charges.md
scripts/: run-dev-linux.sh  run-dev.ps1  run-release-linux.sh  run-release.ps1
services/movie-service/: Cargo.toml
services/movie-service/src/: main.rs
services/recommendation-service/: Cargo.toml
services/recommendation-service/src/: lib.rs  main.rs
services/recommendation-service/tests/: integration-test.rs
services/weather-service/: Cargo.toml
services/weather-service/src/: lib.rs  main.rs
services/weather-service/tests/: integration-test.rs
services/web-server/: Cargo.toml
services/web-server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.jsx  index.css  main.jsx  sidebar.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src/components/: MoodSelector.jsx  Particles.jsx  Sidebar.jsx  WeatherCard.jsx
ui/src/components/movie/: MovieCard.jsx  MovieGrid.jsx  MovieModal.jsx
ui/src/pages/: Home.jsx
ui/src/themes/: weatherThemes.js
