[workspace]
resolver = "2"

members = [
    "shared",
    "services/weather-service",
    "services/movie-service",
    "services/recommendation-service",
    "services/web-server",
    "ui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Albin CANALS", "Léo NOAILLES", "Abel CHAREYRON", "Antoine LANDON"]

[workspace.dependencies]
# Dépendances communes à tous les services
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = "0.24"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenvy = "0.15"
shared = { path = "./shared" }

