[package]
name = "movie-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
rumqttc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
shared = { workspace = true }


