[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
rumqttc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
shared = { workspace = true }
reqwest = { workspace = true }
